--- a/aio/tools/transforms/templates/api/lib/memberHelpers.html
+++ b/aio/tools/transforms/templates/api/lib/memberHelpers.html
@@ -98,8 +98,8 @@
 
         {% if method.containerDoc.docType === 'class' and method.name === 'constructor' and method.containerDoc.extensible !== true %}
         <p class="final-message">
-          This class is "final" should not be extended.
-          See the <a href="https://github.com/angular/angular/blob/master/docs/PUBLIC_API.md#final-classes">public API notes</a>.
+          This class is "final" and should not be extended.
+          See the <a href="{$ github.githubVersionedUrl(versionInfo) $}/docs/PUBLIC_API.md#final-classes">public API notes</a>.
         </p>
         {% endif %}
 
