fixup! build(docs-infra): add `sealed` markers to classes in API pages

--- a/aio/src/styles/2-modules/api-pages/_api-pages.scss
+++ b/aio/src/styles/2-modules/api-pages/_api-pages.scss
@@ -97,7 +97,7 @@
 
         .github-links {
           a {
-
+            
             .material-icons:hover {
               background: none;
             }
@@ -165,6 +165,10 @@
 
   .short-description {
     margin-top: 8px;
+  }
+
+  .final-message {
+    font-style: italic;
   }
 
   .api-heading {
