--- a/aio/tools/transforms/templates/api/base.template.html
+++ b/aio/tools/transforms/templates/api/base.template.html
@@ -26,7 +26,9 @@
     {% if doc.deprecated !== undefined %}<label class="api-status-label deprecated">deprecated</label>{% endif %}
     {% if doc.security !== undefined %}<label class="api-status-label security">security</label>{% endif %}
     {% if doc.pipeOptions.pure === 'false' %}<label class="api-status-label impure-pipe">impure</label>{% endif %}
-    {% if doc.docType === 'class' and doc.extensible !== true %}<label class="api-status-label sealed" title="This class should not be extended.">sealed</label>{% endif %}
+    {% if doc.docType === 'class' and doc.extensible !== true %}<label class="github-links api-status-label final" title="This class should not be extended.">
+      <a href="https://github.com/angular/angular/blob/master/docs/PUBLIC_API.md#final-classes">final</a>
+    </label>{% endif %}
   </header>
   {% endblock %}
   <aio-toc class="embedded"></aio-toc>
