--- a/aio/tools/transforms/templates/api/lib/memberHelpers.html
+++ b/aio/tools/transforms/templates/api/lib/memberHelpers.html
@@ -96,7 +96,7 @@
       <td class="short-description">
         {$ method.shortDescription | marked $}
 
-        {% if method.containerDoc.docType === 'class' and method.name === 'constructor' and method.containerDoc.extensible !== true %}
+        {% if method.containerDoc.docType === 'class' and method.name === 'constructor' and !method.containerDoc.isAbstract and method.containerDoc.extensible !== true %}
         <p class="final-message">
           This class is "final" and should not be extended.
           See the <a href="{$ github.githubVersionedUrl(versionInfo) $}/docs/PUBLIC_API.md#final-classes">public API notes</a>.
